pipeline in terraform and roboshop jenkins

--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Single Branch Pipelines
+- name: include task list in play
   ansible.builtin.include_tasks:
     file: sjob.yml
   loop: "{{sjobs}}"
