--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -1,6 +1,6 @@
 - name : copy xml file
   ansible.builtin.template:
-    src: test.xml
+    src: sjob.xml
     dest: /tmp/test.xml
 
 - name : Create jenkins job
