--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -5,7 +5,7 @@
 
 - name : Create jenkins job
   community.general.jenkins_job:
-    config: "{{lookup('file), 'test.xml'}}"
+    config: "{{lookup('file'), 'test.xml'}}"
     name: "{{item.job_name}}"
     password: admin123
     url: http://172.31.5.242:8080
