--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -8,5 +8,5 @@
     config: "{{lookup('file'), 'test.xml'}}"
     name: "{{item.job_name}}"
     password: admin123
-    url: http://172.31.5.242:8080
+    url: https://172.31.5.242:8080
     user: admin
