--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -6,7 +6,7 @@
 - name : Create jenkins job
   community.general.jenkins_job:
     config: "{{lookup('file'), 'test.xml'}}"
-    name: "{{item.job_name}}"
+    name: test create from ansible
     password: admin123
-    url: https://172.31.5.242:8080
+    url: http://172.31.5.242:8080
     user: admin
