--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -6,7 +6,7 @@
 
 - name: Create jenkins job
   community.general.jenkins_job:
-    config: "{{ lookup('file'), '/tmp/test.xml'}}"
+    config: "{{ lookup('file', '/tmp/test.xml') }}"
     name: "{{item.job_name}}"
     user: admin
     password: admin123
