--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -1,3 +1,15 @@
+- name: Check if jenkins job exists or not
+  community.general.jenkins_job_info:
+    name: "{{item.job_name}}"
+    user: admin
+    password: admin123
+    url: http://172.31.5.242:8080
+  register: jenkins_job_info
+
+- name: debug
+  debug:
+    msg: "{jenkins_job_status}"
+
 - name : copy xml file
   ansible.builtin.template:
     src: sjob.xml
