--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -4,4 +4,4 @@ sjobs:
   - { git_repo_url: https://github.com//PranathiAT/aws-ssm-parameter-store.git, job_name: aws-ssm-parameter-store }
 
 mjobs:
-  -  - { git_repo_url: https://github.com//PranathiAT/cart.git, job_name: cart }
+  - { git_repo_url: https://github.com//PranathiAT/cart.git, job_name: cart }
