--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -10,5 +10,6 @@ mjobs:
   - { git_repo_url: https://github.com//PranathiAT/payment.git, job_name: payment }
   - { git_repo_url: https://github.com//PranathiAT/shipping.git, job_name: shipping }
   - { git_repo_url: https://github.com//PranathiAT/dispatch.git, job_name: dispatch }
+  - { git_repo_url: https://github.com//PranathiAT/frontend.git, job_name: frontend }
 
 
