--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -2,6 +2,7 @@ sjobs:
   - { git_repo_url: https://github.com/PranathiAT/roboshop-terraform.git, job_name: roboshop-terraform }
   - { git_repo_url: https://github.com//PranathiAT/roboshop-ansible.git, job_name: roboshop-ansible }
   - { git_repo_url: https://github.com//PranathiAT/aws-ssm-parameter-store.git, job_name: aws-ssm-parameter-store }
+  - { git_repo_url: https://github.com//PranathiAT/roboshop-helm.git, job_name: roboshop-helm.git }
 
 mjobs:
   - { git_repo_url: https://github.com//PranathiAT/cart.git, job_name: cart }
