--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -6,12 +6,12 @@ sjobs:
 
 
 mjobs:
-  - { git_repo_url: https://github.com//PranathiAT/cart.git, job_name: cart }
-  - { git_repo_url: https://github.com//PranathiAT/catalogue.git, job_name: catalogue }
-  - { git_repo_url: https://github.com//PranathiAT/user.git, job_name: user }
-  - { git_repo_url: https://github.com//PranathiAT/payment.git, job_name: payment }
-  - { git_repo_url: https://github.com//PranathiAT/shipping.git, job_name: shipping }
-  - { git_repo_url: https://github.com//PranathiAT/dispatch.git, job_name: dispatch }
-  - { git_repo_url: https://github.com//PranathiAT/frontend.git, job_name: frontend }
-
-
+#  - { git_repo_url: https://github.com//PranathiAT/cart.git, job_name: cart }
+#  - { git_repo_url: https://github.com//PranathiAT/catalogue.git, job_name: catalogue }
+#  - { git_repo_url: https://github.com//PranathiAT/user.git, job_name: user }
+#  - { git_repo_url: https://github.com//PranathiAT/payment.git, job_name: payment }
+#  - { git_repo_url: https://github.com//PranathiAT/shipping.git, job_name: shipping }
+#  - { git_repo_url: https://github.com//PranathiAT/dispatch.git, job_name: dispatch }
+#  - { git_repo_url: https://github.com//PranathiAT/frontend.git, job_name: frontend }
+#
+#
