--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -6,7 +6,7 @@ sjobs:
 
 
 mjobs:
-#  - { git_repo_url: https://github.com//PranathiAT/cart.git, job_name: cart }
+  - { git_repo_url: https://github.com//PranathiAT/cart.git, job_name: cart }
 #  - { git_repo_url: https://github.com//PranathiAT/catalogue.git, job_name: catalogue }
 #  - { git_repo_url: https://github.com//PranathiAT/user.git, job_name: user }
 #  - { git_repo_url: https://github.com//PranathiAT/payment.git, job_name: payment }
