--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -1,8 +1,10 @@
 sjobs:
-  - { git_repo_url: https://github.com/PranathiAT/roboshop-terraform.git, job_name: roboshop-terraform }
-  - { git_repo_url: https://github.com//PranathiAT/roboshop-ansible.git, job_name: roboshop-ansible }
-  - { git_repo_url: https://github.com//PranathiAT/aws-ssm-parameter-store.git, job_name: aws-ssm-parameter-store }
-  - { git_repo_url: https://github.com//PranathiAT/roboshop-helm.git, job_name: roboshop-helm }
+  - { git_repo_url: https://github.com/PranathiAT/roboshop-terraform.git, job_name: roboshop-terraform , file_name: Jenkinsfile}
+  - { git_repo_url: https://github.com//PranathiAT/roboshop-ansible.git, job_name: roboshop-ansible ,file_name: Jenkinsfile}
+  - { git_repo_url: https://github.com//PranathiAT/aws-ssm-parameter-store.git, job_name: aws-ssm-parameter-store,file_name: Jenkinsfile }
+  - { git_repo_url: https://github.com//PranathiAT/roboshop-helm.git, job_name: roboshop-helm ,file_name: Jenkinsfile}
+  - { git_repo_url: https://github.com//PranathiAT/aws-ssm-parameter-store.git, job_name: aws-ssm-docker,file_name: Jenkinsfile.ps }
+
 
 
 mjobs:
